<resources>
    <string name="app_name">BrainTrainer</string>
    <string name="_30s">30s</string>
    <string name="_0">0</string>
    <string name="sum">sum</string>
    <string name="result">result</string>
    <string name="num1">num1</string>
    <string name="num4">num4</string>
    <string name="num3">num3</string>
    <string name="num2">num2</string>
    <string name="let_s_play">Let\'s Play !</string>
    <string name="button">Button</string>
    <string name="play_again">Play Again !</string>
    <string name="textview">TextView</string>
</resources>
