<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raksh.braintrainer.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textsec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_30s"
        android:textAlignment="center"
        android:textColor="#ff000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:text="30s" />

    <TextView
        android:id="@+id/textscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#ff000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <TextView
        android:id="@+id/textsum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingTop="20sp"
        android:text="@string/sum"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        tools:targetApi="jelly_bean" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textsum">

        <TextView
            android:id="@+id/text1"
            android:layout_width="126sp"
            android:layout_height="129sp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:background="@android:color/holo_blue_dark"
            android:clickable="true"
            android:focusable="true"
            android:onClick="check"
            android:paddingTop="45dp"
            android:text="@string/num1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="194dp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="126sp"
            android:layout_height="129sp"
            android:layout_column="1"
            android:layout_margin="3dp"
            android:layout_row="0"
            android:background="@android:color/holo_green_light"
            android:clickable="true"
            android:focusable="true"
            android:onClick="check"
            android:paddingTop="45dp"
            android:text="@string/num2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="228dp"
            tools:layout_editor_absoluteY="194dp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="126sp"
            android:layout_height="129sp"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:layout_row="1"
            android:background="@android:color/holo_orange_dark"
            android:clickable="true"
            android:focusable="true"
            android:onClick="check"
            android:paddingTop="45dp"
            android:text="@string/num3"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="333dp" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="126sp"
            android:layout_height="129sp"
            android:layout_column="1"
            android:layout_margin="3dp"
            android:layout_row="1"
            android:background="@android:color/holo_red_light"
            android:clickable="true"
            android:focusable="true"
            android:onClick="check"
            android:paddingTop="45dp"
            android:text="@string/num4"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="226dp"
            tools:layout_editor_absoluteY="332dp" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>
